Fixed dropdowns on small screens

--- a/common/common.css
+++ b/common/common.css
@@ -233,3 +233,6 @@ header{
     .nav-item a {font-size: 0;}
     .icon {width: 30px; height: 30px}
 }
+.dropdown-item a {
+    font-size: 16px;
+}
